# target-kafka

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
target_kafka/: client.py  sinks.py  target.py
