[tool.poetry]
name = "target-kafka"
version = "0.0.1"
description = "`target-kafka` is a Singer target for Apache Kafka / Confluent Cloud, built with the Meltano SDK for Singer Targets."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "Kafka",
    "Confluent",
]
license = "Apache 2.0"
packages = [{ include = "target_kafka" }]

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
singer-sdk = "^0.9.0"
hotglue-singer-sdk = "^1.0.3"
confluent-kafka = {version = "^2.14.0", extras = ["schemaregistry"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "target_kafka"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-kafka = 'target_kafka.target:TargetKafka.cli'
